#pragma once
#include "engine/global/base.h"

namespace rtr {


struct RHI_depth_test_state {
    
};

struct RHI_blend_state {
    
};

struct RHI_cull_state {

};

struct RHI_stencil_state {

};

struct RHI_polygon_offset_state {

};


class RHI_pipeline_state {


};

};